--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=grifo-asto-core
 server.port=8080
 
 # Datos de conexión a PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/grifodb
-spring.datasource.username=admin
+spring.datasource.url=jdbc:postgresql://localhost:5433/grifodb
+spring.datasource.username=postgres
 spring.datasource.password=admin123
 
 # JPA básico
