feat: update medicion change string for double

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,18 @@ spring.application.name=grifo-asto-core
 # Puerto del servidor
 server.port=8080
 
+
+
+# JPA básico
+spring.jpa.database=postgresql
+spring.jpa.show-sql=false
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
 # Datos de conexión a PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5433/grifodb
 spring.datasource.username=postgres
 spring.datasource.password=admin123
 
-# JPA básico
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
