--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,22 @@
 version: '3.8'
+
 services:
+  java_app:
+    container_name: java_app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: grifo-java-app:1.0.0
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/grifodb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: admin123
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    depends_on:
+      - postgres
+
   postgres:
     image: postgres:15
     container_name: grifo-postgres
