--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,10 @@ spring.application.name=grifo-asto-core
 server.port=8080
 
 
-
 # JPA
 spring.jpa.database=postgresql
 spring.jpa.show-sql=false
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
